[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Courtroom.png" type="Texture" id=1]
[ext_resource path="res://TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/Courtroom.tres" type="Theme" id=3]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="Courtroom" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="DifficultyButton" type="Button" parent="."]
margin_left = 283.0
margin_top = 372.0
margin_right = 822.0
margin_bottom = 540.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 1140.0
margin_top = 369.0
margin_right = 1679.0
margin_bottom = 537.0
theme = ExtResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="DifficultyButton" to="." method="_on_DifficultyButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
